k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mbmicroservice-service
spec:
  selector:
    app: mbmicroservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer # Cambiar a ClusterIP si se usará Ingress
